--- a/project/chat/templates/chat/index.html
+++ b/project/chat/templates/chat/index.html
@@ -5,17 +5,10 @@
 {% block content %}
 
 <p>Enter a chatroom</p><br>
-<input type="text" name="roomName" id="roomName"><input id="enterBtn" type="button" value="Enter">
+<form action="/chat/" method="POST">
+{% csrf_token %}
+<input type="text" name="username" id="username"><input id="enterBtn" type="submit" value="Enter">
+</form>
 
-<script>
-    const url = 'http://'+window.location.host;
-    const roomNameRef = document.getElementById('roomName');
-    const enterBtn = document.getElementById('enterBtn');
-
-    enterBtn.addEventListener('click', (e)=>{
-        if (roomNameRef.value != '') window.location.href = url+"/chat/"+roomNameRef.value;
-        else console.error("ERROR: Empty room name!");
-    });
-</script>
 
 {% endblock content %}
