Modify login function to allow "next" parameter

--- a/project/account/templates/login.html
+++ b/project/account/templates/login.html
@@ -27,6 +27,7 @@
     <div style="color: red;">{{login_form.non_field_errors}}</div>
     {% endif %}
 
+    <input type="hidden" name="next" value="{{request.GET.next}}">
     <button type="submit">Login</button>
 </form>
 
