--- a/project/account/templates/profile.html
+++ b/project/account/templates/profile.html
@@ -7,7 +7,7 @@ HIHI, {% if user.is_authenticated %}{{user.username}}{% else %}Anonymous{% endif
 {% if user.is_authenticated %}
     <a href="{% url 'logout' %}">Logout</a>
 {% else %}
-    <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}">Login</a>
+    <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}?next=/chat/index/">Login</a>
 {% endif %}
 
 {% endblock content %}
