Added chatroom creation when choosing target chat user

--- a/project/chat/templates/chat/chatroom.html
+++ b/project/chat/templates/chat/chatroom.html
@@ -10,46 +10,19 @@
 
 {% block content %}
 
+{% if room_name %}
+{% load static %}
+<script defer src="{% static 'chat/chat_api.js' %}"></script>
 <h1>{{room_name}}</h1>
 <div class="chat-log">
 </div><br>
 {% csrf_token %}
 <input type="text" name="chat-input" id="chat-input" size="100"><input id="chat-submit-btn" type="button" value="Send">
-<script>
-    const roomName = document.querySelector("h1").innerHTML;
-    const chatLog = document.querySelector(".chat-log");
-    const chatInput = document.getElementById("chat-input");
-    const chatSubmitBtn = document.getElementById("chat-submit-btn");
 
-    const url = 'http://'+window.location.host+'/chat/'+roomName+'/';
-    const csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+{% else %}
 
-    chatSubmitBtn.addEventListener('click', (e)=>{
-        let message = chatInput.value;
-        message_json = {
-            'message_string':message,
-            'message_status':'chat_msg',
-            'sent_time':Date.now()
-        }
-        console.log(message_json);
-        fetch(url, {
-            body: JSON.stringify(message_json),
-            cache: 'no-cache',
-            credentials: 'same-origin',
-            headers:{
-                'content-type': 'application/json',
-                'X-CSRFToken':csrfToken
-            },
-            method: 'POST'
-        }).then(async res => {
-            let res_json = await res.json();
-            console.log(res_json);
-        }).catch(err =>{
-            console.error('ERROR: ', err);
-        });
-        chatInput.value = '';
-    });
+<h1>{{error}}</h1><br>
+<a href='/chat'>Click here to go back to chat selection!</a>
 
-</script>
-
+{% endif %}
 {% endblock content %}
