Implemented basic chat message send and receive functions

--- a/project/chat/templates/chat/chatroom.html
+++ b/project/chat/templates/chat/chatroom.html
@@ -17,7 +17,8 @@
 <div class="chat-log">
 </div><br>
 {% csrf_token %}
-<input type="text" name="chat-input" id="chat-input" size="100"><input id="chat-submit-btn" type="button" value="Send">
+<input type="text" name="chat-input" id="chat-input" size="100"><input id="chat-submit-btn" type="button" value="Send"><br>
+<input id="chat-receive-btn" type="button" value="Receive">
 
 {% else %}
 
