--- a/project/friendSearch/templates/frd_searching.html
+++ b/project/friendSearch/templates/frd_searching.html
@@ -3,7 +3,7 @@
 {% block content %}
 <!-- template for friend_searching-->
     <h2>fill in the form and click "submit" button to find your friend!</h2>
-    <p>If you don't have any perference on hobbies and personality, just type <b>"any"</b>.</p>
+    <p>You can pick more than one preferences, just seperated them with <b>", "</b>.</p>
     <body>
         <!--the form for searching friend-->
         <form method="post" > <!--move to another interface-->
@@ -17,6 +17,8 @@
             {% endfor %}
             <input type ="submit" value="search">
         </form>
+        <button onclick="location.href='/account/profile'">Go back to Profile</button>
+        <button onclick="location.href='/friendSearch/request'">Check request</button>
     </body>
 
 {% endblock content %}
