--- a/project/account/templates/profile.html
+++ b/project/account/templates/profile.html
@@ -8,7 +8,7 @@ HIHI, {% if user.is_authenticated %}{{user.username}}{% else %}Anonymous{% endif
     <a href="{% url 'logout' %}">Logout</a>
     <img src="{{user.profile.image.url}}">
 {% else %}
-    <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}?next=/chat/index/">Login</a>
+    <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}?next=/chat/">Login</a>
 {% endif %}
 
 {% endblock content %}
