--- a/project/account/templates/profile.html
+++ b/project/account/templates/profile.html
@@ -1,14 +1,69 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Profile
+{% endblock title %}
+
 {% block content %}
 
-HIHI, {% if user.is_authenticated %}{{user.username}}{% else %}Anonymous{% endif %}
+<div class="container">
+    <p class="text-center header">Profile</p>
 
-{% if user.is_authenticated %}
-    <a href="{% url 'logout' %}">Logout</a>
-    <img src="{{user.profile.image.url}}">
-{% else %}
-    <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}?next=/chat/">Login</a>
-{% endif %}
+    <div class="greeting-message">
+        Hi, {% if user.is_authenticated %}{{user.username}}{% else %}Anonymous{% endif %}.
+    </div>
+    
+    {% if user.is_authenticated %}
+        <div class="btn-group" role="group">
+            <a class="btn btn-secondary" href="{% url 'profile_update' %}">Update Profile</a>
+            <a class="btn btn-secondary" href="{% url 'logout' %}">Logout</a>
+        </div>
+        <div class="profile">
+            <img class="profile-image" src="{{user.profile.image.url}}">
+            {% if not user.profile.first_name or not user.profile.last_name or not user.profile.gender or not user.profile.date_of_birth or not user.profile.job_title or not user.profile.passions %}
+            <p>The profile is not fully set up yet. Please update your profile.</p>
+            {% else %}
+            <p>Name: {{user.profile.first_name}} {{user.profile.last_name}}</p>
+            <p>Gender: {{user.profile.gender}}</p>
+            <p>Date Of Birth: {{user.profile.date_of_birth}}</p>
+            <p>Job Title: {{user.profile.job_title}}</p>
+            <p>Passions: {{user.profile.passions}}</p>
+            {% endif %}
+        </div>
+    {% else %}
+        <div class="btn-group" role="group">
+            <a class="btn btn-secondary" href="{% url 'register' %}">Register</a>
+            <a class="btn btn-secondary" href="{% url 'login' %}?next=/chat/">Login</a>
+        </div>
+    {% endif %}
+</div>
 
 {% endblock content %}
+
+{% block style %}
+    .header {
+        font-size: 25px;
+    }
+    .greeting-message {
+        margin-bottom: 15px;
+    }
+    .profile {
+        margin-top: 15px;
+    }
+    .profile > p {
+        margin-top: 15px;
+    }
+{% endblock style %}
+
+{% block script %}
+    $(document).ready(function() {
+        $(".profile-image").each(function() {
+            var targetWidth = 100;
+            var width = $(this).width();
+            var height = $(this).height();
+            var ratio = targetWidth / width;
+            $(this).css("width", targetWidth);
+            $(this).css("height", height * ratio);
+        });
+    });
+{% endblock script %}
