--- a/project/friendSearch/templates/base.html
+++ b/project/friendSearch/templates/base.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
 
 
 <head>
     <meta charset = "UTF-8">
     <meta name = "author" content = "Ho Siu Hang">
+    <title>
     {% block title %}
     {% endblock title %}
-</head>
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
 <body>
@@ -16,3 +18,10 @@
 </body>
 
 </html>
+
+<style>
+
+    {%block style%}
+    {%endblock style%}
+
+</style>
