--- a/project/friendSearch/templates/requests_list.html
+++ b/project/friendSearch/templates/requests_list.html
@@ -5,18 +5,45 @@
 {%endblock title%}
 
 {% block content %}
-    {%if messages%}
-        {%for message in messages%}
-            {%if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
-                <p>Succ:{{message}}</p>
-            {%else%}
-                <p>Error:{{message}}</p>
-            {%endif%}
-        {%endfor%}
-    {%endif%}
+    <!--external css file-->
+    {%load static%}
+        <link rel="stylesheet" href={%static "css/design.css"%}>
+
     
-    <body>                
-        <div class="container">
+    <header> <!--reference: bootstrap-->
+        <nav class="navbar navbar-expand-md navbar-secondary navbar-1 bg-secondary">            
+            <a href = '/mainpage'>
+            {%load static%}
+                <img src={% static "/images/icon.png"%} style="width:50px;height:50px;">         
+            </a>
+            <button class = "navbar-toggler" type="button" data-toggle="collapse" data-target="#lists" aria-expanded="false" aria-controls="lists" aria-label="Toggle navigation">
+                <span style="color: white">...</span>
+            </button>
+            <div class="collapse navbar-collapse ml-auto" id="lists">            
+                <a class="nav-item nav-link" href='/account/profile'>Profile</a>
+                <a class="nav-item nav-link" href='/friendSearch/request'>Request</a>
+                <a class="nav-item nav-link" href='/friendSearch/frdSearch'>Find Friend</a>
+                <a class="nav-item nav-link" href='/chat'>Chat</a>
+            </div>
+        </nav>
+    </header>
+    <body>      
+            {%if messages%}
+                {%for message in messages%}
+                    {%if message.level == DEFAULT_MESSAGE_LEVELS.INFO %} <!--reference: the bootstrap-->
+                        <div class="alert alert-success mb-0 alert-dismissible fade show" role="alert">{{message}}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span> 
+                        </div>
+                    {%else%}
+                        <div class="alert alert-danger mb-0 alert-dismissible fade show" role="alert"><b>Error: </b>{{message}}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </div>
+                    {%endif%}
+                {%endfor%}
+            {%endif%}
+
             <h2>The request list:</h2>
                 {%if requestlist %}
                     {% for item in requestlist %}
@@ -24,19 +51,17 @@
                             <p>{{item.username}}</p>
                         </div>
                     {%endfor%}
-                    <p>Type valid friend from the list above, seperate with " ,"</p>
+                    <p>Type valid friend from the list above, seperate with ", "</p>
                     <form method='post'>
                         {% csrf_token %}
                         {% for field in approvelist %}
                             <div>{{field}}</div>
                         {% endfor %}
                         <input type="Submit" value="Type the username to accept it" id="input">
-                        <p id='requesterror'></p>
                     </form>
                 {%else%}
                     <p>There is no requests yet, waiting for others' request</p>
                 {%endif%}
-                <button onclick="location.href='/friendSearch/frdSearch'" type = button>Go back</button>
         </div>
     </body>
 
