--- a/project/mainpage/templates/index.html
+++ b/project/mainpage/templates/index.html
@@ -13,13 +13,14 @@
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href={% static "css/bootstrap.min.css" %}>
 
-    <link rel="stylesheet" type="text/css" href="../static/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href={% static "css/font-awesome.css" %}>
 
-    <link rel="stylesheet" href="../static/css/cuhktinder.css">
+    <link rel="stylesheet" href={% static "css/cuhktinder.css" %}>
 
-    <link rel="stylesheet" href="../static/css/owl-carousel.css">
+    <link rel="stylesheet" href={% static "css/owl-carousel.css" %}>
 
 </head>
 
@@ -46,7 +47,7 @@
                         <!-- ***** Logo Start ***** -->
 
                         <a href="index.html" class="logo">
-                            <img src="../images/icon.png" alt="" style="width:50px;height:60px;">
+                            <img src={% static "images/icon.png" %} alt="" style="width:50px;height:60px;">
                             CUTinder
 
                         </a>
@@ -82,7 +83,7 @@
 
 
     <!-- ***** Welcome Area Start ***** -->
-    <div class="welcome-area" id="welcome">
+    <div class="welcome-area" id="welcome" style="background-image: url({% static "images/banner-bg.png" %});">
 
         <!-- ***** Header Text Start ***** -->
         <div class="header-text">
@@ -294,7 +295,7 @@
 
 
     <!-- ***** Footer Start ***** -->
-    <footer id="contact-us">
+    <footer id="contact-us" style="background-image: url({% static "images/footer-bg.png" %});">
         <div class="container">
             <div class="footer-content">
                 <div class="row">
@@ -358,21 +359,22 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="../static/js/jquery-2.1.0.min.js"></script>
+    {% load static %}
+    <script src={% static "js/jquery-2.1.0.min.js" %}></script>
 
     <!-- Bootstrap -->
-    <script src="../static/js/popper.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src={% static "js/popper.js" %}></script>
+    <script src={% static "js/bootstrap.min.js" %}></script>
 
     <!-- Plugins -->
-    <script src="../static/js/owl-carousel.js"></script>
-    <script src="../statci/js/scrollreveal.min.js"></script>
-    <script src="../static/js/waypoints.min.js"></script>
-    <script src="../static/js/jquery.counterup.min.js"></script>
-    <script src="../static/js/imgfix.min.js"></script>
+    <script src={% static "js/owl-carousel.js" %}></script>
+    <script src={% static "js/scrollreveal.min.js" %}></script>
+    <script src={% static "js/waypoints.min.js" %}></script>
+    <script src={% static "js/jquery.counterup.min.js" %}></script>
+    <script src={% static "js/imgfix.min.js" %}></script>
 
     <!-- Global Init -->
-    <script src="../assets/js/custom.js"></script>
+    <script src={% static "js/custom.js" %}></script>
 
 </body>
 </html>
