--- a/project/chat/static/chat/home_style.css
+++ b/project/chat/static/chat/home_style.css
@@ -1,18 +1,5 @@
-div{
-    float: left;
-}
-
-.friendListDiv{
-    width: 20%;
-    height: 100%;
-}
-
-.chatroomDiv{
-    width: 80%;
-    height: 100%;
-}
-
 iframe{
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    margin: 0;
 }
