edit get error (href)
Sorry, to visit mainpage, I should use 'href="/" not "/mainpage"

--- a/project/friendSearch/templates/frd_searching.html
+++ b/project/friendSearch/templates/frd_searching.html
@@ -10,7 +10,7 @@
     {% load static %}
     <header> <!--reference: bootstrap-->
         <nav class="navbar navbar-expand-md navbar-secondary navbar-1 bg-secondary">            
-            <a href = '/mainpage'>
+            <a href = '/'>
                 <img src={% static "/images/icon.png"%} style="width:50px;height:50px;">         
             </a>
             <button class = "navbar-toggler" type="button" data-toggle="collapse" data-target="#lists" aria-expanded="false" aria-controls="lists" aria-label="Toggle navigation">
