--- a/project/friendSearch/templates/requests_list.html
+++ b/project/friendSearch/templates/requests_list.html
@@ -12,7 +12,7 @@
     
     <header> <!--reference: bootstrap-->
         <nav class="navbar navbar-expand-md navbar-secondary navbar-1 bg-secondary">            
-            <a href = '/mainpage'>
+            <a href = '/'>
             {%load static%}
                 <img src={% static "/images/icon.png"%} style="width:50px;height:50px;">         
             </a>
