--- a/project/friendSearch/templates/search_result.html
+++ b/project/friendSearch/templates/search_result.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href={%static "css/design.css"%}>
     <header> <!--reference: bootstrap-->
         <nav class="navbar navbar-expand-md navbar-secondary navbar-1 bg-secondary">            
-            <a href = '/mainpage'>
+            <a href = '/'>
             {%load static%}
                 <img src={% static "/images/icon.png"%} style="width:50px;height:50px;">         
             </a>
